unpackaged/main/default/objects/loan__Accrual_Entry__c/loan__Accrual_Entry__c.object-meta.xml
<CustomObject>
    <label>Accrual Entry</label>
    <nameField>
        <displayFormat>ACE-{0000000000}</displayFormat>
        <label>Accrual Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accrual Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>