unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Accounting_Entry__c.field-meta.xml
<CustomField>
    <fullName>loan__Accounting_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Entry</label>
    <referenceTo>clcommon__Accounting_Entry__c</referenceTo>
    <relationshipLabel>Accrual Entries</relationshipLabel>
    <relationshipName>Accrual_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>