unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Amount__c.field-meta.xml
<CustomField>
    <fullName>loan__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>