unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Fee__c.field-meta.xml
<CustomField>
    <fullName>loan__Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The fee which is being accrued</description>
    <inlineHelpText>The fee which is being accrued</inlineHelpText>
    <label>Fee</label>
    <referenceTo>loan__Fee__c</referenceTo>
    <relationshipLabel>Accrual Entries</relationshipLabel>
    <relationshipName>Accrual_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>