unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__GL_Posted__c.field-meta.xml
<CustomField>
    <fullName>loan__GL_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field indicates if accounting has been passed for the accrual entry record.</inlineHelpText>
    <label>GL Posted</label>
    <type>Checkbox</type>
</CustomField>