unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Internal_Accounting_Generated__c.field-meta.xml
<CustomField>
    <fullName>loan__Internal_Accounting_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field indicates if accounting has been passed for the accrual entry record.</inlineHelpText>
    <label>Internal Accounting Generated</label>
    <type>Checkbox</type>
</CustomField>