unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Internal_Accounting_Reversal_Generated__c.field-meta.xml
<CustomField>
    <fullName>loan__Internal_Accounting_Reversal_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Accounting Reversal Generated</label>
    <type>Checkbox</type>
</CustomField>