unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Accrual Entries</relationshipLabel>
    <relationshipName>Accrual_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>