unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>loan__Transaction_Date__c</fullName>
    <label>Transaction Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>