unpackaged/main/default/objects/loan__Accrual_Entry__c/fields/loan__Type__c.field-meta.xml
<CustomField>
    <fullName>loan__Type__c</fullName>
    <description>Indicates what component this accrual entry is created for.</description>
    <inlineHelpText>Indicates what component this accrual entry is created for.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>